# ProteinMPNN

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
data/: README.md
models/: README.md
src/protein_mpnn/: __init__.py  __main__.py  cli.py  utils.py
src/protein_mpnn/data/: make_dataset.py  utils.py
src/protein_mpnn/data_processing/: __init__.py  make_dataset.py  utils.py
src/protein_mpnn/features/: ___init__.py  build_features.py  utils.py
src/protein_mpnn/models/: __init__.py  calculate_probs.py  calculate_score.py  generate_sequences.py  inference_model.py  run_inference.py  utils.py
src/protein_mpnn/visualization/: __init__.py
