[build-system]
requires = [
    "setuptools >= 61.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "protein_mpnn"
description = "ProteinMPNN is a deep learning based protein sequence design software"
readme = "README.md"
urls = { Homepage = "https://github.com/dauparas/ProteinMPNN" }
license = { file = "LICENSE" }

requires-python = ">=3.9"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]

[project.scripts]
protein_mpnn = "protein_mpnn:main"

[tool.setuptools.dynamic]
version = {attr = "protein_mpnn.__version__"}

[tool.setuptools.package-data]
weights = ["models/"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
line-length = 100
