[build-system]
requires = [
    "setuptools >= 64.0",
    "setuptools-scm>=8"
]
build-backend = "setuptools.build_meta"

[project]
name = "protein_mpnn"
description = "ProteinMPNN is a deep learning based protein sequence design software"
readme = "README.md"
urls = { Homepage = "https://github.com/dauparas/ProteinMPNN" }
license = { file = "LICENSE" }

requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
]

[project.scripts]
protein_mpnn = "protein_mpnn.__main__:main"

[tool.setuptools_scm]

[tool.setuptools.dynamic]
version = {attr = "protein_mpnn.__version__"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
pydocstyle.convention = "google"
pylint.max-args = 8
select = ["F", "E", "W", "C90", "I", "D", "UP", "ANN0", "S", "FBT", "C4", "PL", "NPY", "TRY", "FURB", "LOG", "RUF"]
ignore = ["D105", "D107", "PLW", "UP007", "N812"]
